**  denotes quite substantial/important changes
*** denotes really big changes 

ISSUES TO CLEAR

* add test for single smooths (flush out memory stupidities)
  
* add tests for soap.

* add pathalogical tests from 2008 paper

* Add more on REML to the help files.

* all branch testing of criteria families links and optimizers.

* check gam.check for all optimizers and criteria.

* need to add proper rank deficiency testing in mgcvTest

1.5-0

*** Efficient and general REML/ML smoothing selection implemented. 
   Smoothness selection criterion and numerical optimizer are now
   selected using arguments `method' and `optimizer' of `gam', and 
   `gam.method' has been removed.

*** To further enhance stability and efficiency, Fisher scoring is now 
   only used for canonical links, when it corresponds to full Newton. 
   With non-canonical links PIRLS is based on full Newton. In addition all 
   computations are now with derivative ratios to guard against 
   overflow.

** Derivative iteration as in Wood (2008) has been replaced by a direct
   implicit function method (which costs no more given Newton based 
   PIRLS).

** An option `select' has been added to `gam' to allow terms to be
   completely removed from a model by smoothness selection. 

** The shrinkage smoothers "cs" and "ts" have been modified 
   substantially. The Wood (2006, 4.1.6) proposal of adding a 
   small multiple of the identity matrix to the penalty matrix 
   is flawed in that it tends to corrupt small eigen values
   of the penalty matrix for large (dimension) penalty matrices. 
   It is much better to set the zero eigenvalues of the penalty matrix 
   to a small proportion of the smallest +ve eigenvalue, and to 
   use the matrix with the resulting eigen-decomposition as the 
   penalty. This is now done. Thanks to Roman Torgovitsky for 
   reporting the original problem.

** Tweedie family added (including `ldTweedie' function to evaluate 
   log Tweedie densities for powers in (1,2]).
